--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
 language: php
-install: cd hubble && composer install
+
+addons:
+  postgresql: "9.4"
+
 php:
   - '5.5'
   - '5.6'
   - '7.0'
   - hhvm
   - nightly
+
+install:
+	- cd hubble
+	- cp .env.travis .env
+	- composer install
+	- psgl -c 'create database hubble;' -U postgres
+	- php artisan key:generate
+	- php artisan migrate
