--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ install:
     - cd hubble
     - cp .env.travis .env
     - composer install
-    - psgl -c 'create database hubble;' -U postgres
+    - psql -c 'create database hubble;' -U postgres
     - php artisan key:generate
     - php artisan migrate
